[package]
name = "wfiles"
version = "0.1.0"
authors = ["glynos"]
edition = "2021"

[profile.release-with-debug]
inherits = "release"
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sha-1 = {version = "^0.9.2", features = ["asm"] }
# would have preferred sha-1 but was 30% slower than openssl sha1
xxhash-rust = {version = "^0.8.6", features = ["xxh3"] }
openssl-sys = "^0.9"
openssl = "^0.10"
rusqlite = "^0.29.0"
walkdir = "2"
hex = "^0.3"
clap = "^2.33"
indexmap = "^1.4"
regex = "^1"
vmap = "^0.4.3"
libc = "^0.2.88"

